--- a/kitten.yaml
+++ b/kitten.yaml
@@ -25,7 +25,7 @@ Resources:
           Value: Web Server of StackName
 
       UserData:
-        Fn::Base64:
+        Fn::Base64: !Sub |
           #!/bin/bash
           sudo yum update -y
           sudo yum install -y httpd wget
